compiler/tests/errortests/constmodification.txt
FILENAME:9:7: error: cannot modify a field of an immutable variable.
    x.x = 20; // Error: cannot modify a field of an immutable variable
      ^
